whitespace fix

--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -440,7 +440,7 @@ figure > img {
 .row {
   margin: 0 0 0 -20px;
   padding: 0;
-  letter-spacing: -0.31em;
+  letter-spacing: -0.32em;
 }
 .row > * {
   display: inline-block;
@@ -498,7 +498,7 @@ figure > img {
 [class*=" block"] {
   margin: 0 0 0 -20px;
   padding: 0;
-  letter-spacing: -0.31em;
+  letter-spacing: -0.32em;
   width: auto;
 }
 [class^="block"] > *,
@@ -952,12 +952,12 @@ figure > img {
 .btn-group {
   position: relative;
   /*display: inline-block;*/
-  letter-spacing: -0.31em;
+  word-spacing: -1em;
   list-style: none;
   padding: 0;
 }
 .btn-group > * {
-  letter-spacing: normal;
+  word-spacing: 0;
 }
 .btn-group > * {
   float: left;
@@ -1199,7 +1199,7 @@ a.badge:focus {
   width: 100%;
   height: 100%;
   z-index: 100;
-  letter-spacing: -0.31em;
+  word-spacing: -1em;
   background: transparent no-repeat center center;
 }
 .overlay:before {
@@ -1213,7 +1213,7 @@ a.badge:focus {
   vertical-align: middle;
   text-align: center;
   width: 100%;
-  letter-spacing: normal;
+  word-spacing: 0;
 }
 .overlay-content {
   display: inline-block;
@@ -5362,7 +5362,7 @@ img.mfp-img {
   padding-top: 0;
 }
 /*
- * swiper 2.4.3
+ * Swiper 2.6.0
  * Mobile touch slider and framework with hardware accelerated transitions
  *
  * http://www.idangero.us/sliders/swiper/
@@ -5373,7 +5373,7 @@ img.mfp-img {
  *
  * Licensed under GPL & MIT
  *
- * Released on: January 29, 2014
+ * Released on: April 9, 2014
 */
 .swiper-container {
   margin: 0 auto;
@@ -5536,7 +5536,7 @@ body:before {
   background: #00e9cf;
   color: #000;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.9);
-  z-index: 9999;
+  z-index: 9999999;
 }
 /**
      * Vertical rhythm baseline grid
@@ -5557,7 +5557,7 @@ body:after {
   right: 0;
   top: 0;
   width: auto;
-  z-index: 9999;
+  z-index: 999999;
   opacity: 0.2;
 }
 figure img {
@@ -6643,7 +6643,7 @@ section,
 article > div {
   margin: 0 0 0 -20px;
   padding: 0;
-  letter-spacing: -0.31em;
+  letter-spacing: -0.32em;
 }
 section > *,
 article > div > * {
