--- a/less/mixins/preboot.less
+++ b/less/mixins/preboot.less
@@ -316,11 +316,11 @@
 
 // Fix whitespace
 .whitespace() {
-    letter-spacing: @whitespace;
-    // word-spacing: -0.43em;
+    // letter-spacing: @whitespace;
+    word-spacing: -1em;
     // white-space: nowrap;
     > * {
-        letter-spacing: normal;
-        // word-spacing: normal; 
+        // letter-spacing: normal;
+        word-spacing: 0; 
     }
 }
