--- a/less/modules/overlay.less
+++ b/less/modules/overlay.less
@@ -19,7 +19,8 @@
       width: 100%;
       height: 100%;
       z-index: 100;
-      letter-spacing: -0.31em;
+      // letter-spacing: -0.31em;
+      word-spacing: -1em;
       background: transparent no-repeat center center;
     }
 
@@ -35,7 +36,8 @@
       vertical-align: middle;
       text-align: center;
       width: 100%;
-      letter-spacing: normal;
+      // letter-spacing: normal;
+      word-spacing: 0;
     }
   
     .overlay-content {
